# phishkiller

./: .gitignore  CONTRIBUTING.md  Cargo.toml  ProxyGunner  README.md  config.json  contrib.json  credentials.py  domains.json  domains.txt  emailHosts.py  email_gen.py  ip_changer.py  main.py  permutate.py  phishkiller.py  proxies.py  proxies.txt  pytestserver.py  requestkiller.py  requirements.txt  run.py  test.py  ui.py  words.json
Assets/: constants.py  emailHosts.py  header.py  utils.py
Scripts/: ip_changer.py
resources/: email_domains.txt
src/: birthday_generator.rs  download_names.rs  download_passwords.rs  download_user_agents.rs  first_launch.rs  mail_generator.rs  main.rs  name_generator.rs  password_generator.rs  secure_password_generator.rs  send_payload.rs  user_agent_generator.rs
src/attack/: attack.py
src/config/: loggingConfig.py
src/generators/: emailGenerator.py  passwordGenerator.py
src/ui/: ui.py
src/utils/: contrib.json  validators.py
