[package]
name = "phishkiller"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
zip = "2.1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.10.0"
